# STAT-4830-PromptLab-project

./: .gitignore  =0.25.0  README.md  README_SLOP_ML_PIPELINE.md  pyproject.toml
.claude/: settings.local.json
demo/: deslopifier_demo.ipynb
docs/: STAT4830_Experiment_Spec_v2.md  STAT4830_Experiment_Spec_v3.md  STAT4830_Experiment_Spec_v4.md  experiment_slate.md  presentation_intro_experiments_script.md  presentation_intro_experiments_slides.md
notebooks/: STAT 4830 Proof OC.ipynb  ai_slop_prompt_rewriter_colab_v3 (1).ipynb  build_mirror_dataset (2).ipynb  defan_slop_gan_unsloth (1).ipynb  slop_prelim_experiment (3).ipynb  stat4830_token_slop_classifier_notebook.ipynb  stat4830_token_slop_classifier_v1_5.ipynb  stat4830_token_slop_classifier_v2_(1) (1).ipynb
outputs/: c2_eval.jsonl  c2_log.jsonl  c4a_eval.jsonl  c4a_log.jsonl  c4c_eval.jsonl  c4c_log.jsonl  e1_multidetector.jsonl  e1_summary.txt  e3_qualitative.txt  e3_qualitative_v2.txt  e4_ablation_table.md
scripts/: c1_smoke_test.py  c2_reinforce.py  c3_grpo.py  c4_pareto_chart.py  c4a_reinforce.py  c4c_reinforce.py  e1_multidetector.py  e3_qualitative.py  e3_qualitative_v2.py  e4_ablation_table.py  e5_ternary_chart.py  estimate_vram.py  fluency_reward_validation.py  probe_editlens.py  train_slop_generator.py  train_token_classifier.py
slop_docs/: COLAB_CELLS.md  COLAB_NO_WRITEFILE.md
slop_notebooks/: slop_pipeline_colab.ipynb
slop_scripts/: build_classifier_dataset.py  check_slop_import.py  eval.py  eval_reward_model.py  train_token_classifier.py  validate_dataset.py
slop_tests/: test_token_labels.py  (+1 more)
(+145 files in other folders)
